[package]
name = "image_resolution_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.25.2"
tokio = { version = "1.39", features = ["full"] }
futures = "0.3.30"
chrono = "0.4"
log = "0.4"
log4rs = "1.3"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
mime_guess = "2.0.5"
async-recursion = "1.1.1"
futures-util = "0.3.30"
